--- a/packages/beatui/src/styles/layers/03.components/input-container.css
+++ b/packages/beatui/src/styles/layers/03.components/input-container.css
@@ -58,7 +58,7 @@
 
 /* Focus within state */
 .bc-input-container:focus-within {
-  z-index: 10;
+  z-index: var(--z-index-navigation);
   outline: 2px solid var(--interactive-focus-light);
   outline-offset: -2px;
 }
@@ -80,7 +80,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  z-index: 10;
+  z-index: var(--z-index-navigation);
 }
 
 /* Input wrapper */
